update(static-challenge): interior-consultant

--- a/apps/static-challenges/interior-consultant/index.html
+++ b/apps/static-challenges/interior-consultant/index.html
@@ -54,12 +54,13 @@
             alt="background"
             width="1474"
             height="1110"
+            loading="lazy"
             class="right__content__image"
           />
 
           <div class="right__content__float__card card">
             <div class="card__wrapper__title">
-                <img src="./images/photo2.png" alt="avatar" class="card__avatar" />
+                <img src="./images/photo2.png" alt="avatar" loading="lazy" class="card__avatar" />
 
                 <div class="card__user__information">
                   <p class="card__user__name">Aliza Webber</p>
