update(static-challenge): not-found

--- a/apps/static-challenges/not-found/index.html
+++ b/apps/static-challenges/not-found/index.html
@@ -17,6 +17,7 @@
             width="539"
             height="447"
             loading="lazy"
+            class="left__section__image"
           />
         </section>
 
